--- a/day_03/index.html
+++ b/day_03/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Buổi học thứ 3</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, autem eius maxime commodi repellat voluptates expedita eligendi quam maiores ratione corporis aliquid id, ad totam reiciendis et sunt voluptatibus sint.</p>
+    <p>sử dụng terminal</p>
 </body>
 </html>
