--- a/day_03/index.html
+++ b/day_03/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Buổi học thứ 3</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, autem eius maxime commodi repellat voluptates expedita eligendi quam maiores ratione corporis aliquid id, ad totam reiciendis et sunt voluptatibus sint.</p>
-    <p>sử dụng terminal</p>
+    <h1>Đây là thẻ heading</h1>
+    <h2>Xin chào các bạnn</h2>
+    <p class="para"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio aperiam quam consequatur. Officia soluta voluptate sint obcaecati, fuga corporis laudantium eveniet cumque nostrum quia, dolore tempora! Qui tenetur accusantium hic!</p>
 
-    <p>sử dụng terminal vs code</p>
+    <div class="text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos quas deleniti cum officiis et assumenda perferendis necessitatibus a, numquam eveniet veniam dolorem voluptatem rem libero accusamus ipsa optio sint!</p>
+    </div>
+
+    <div class="box">
+<div class="box-inner">
+
+</div>
+    </div>
 </body>
 </html>
