--- a/day_02/BTVN/b1.html
+++ b/day_02/BTVN/b1.html
@@ -180,7 +180,7 @@ td{
                 <td>Địa chỉ</td> </td>
                 <td>
                     <form action="">
-                        <textarea name="" id="" cols="17" rows="3"></textarea>
+                        <textarea placeholder="Ví dụ : Nguyễn Văn A" name="" id="" cols="17" rows="3"></textarea>
                     </form>
                 </td>
             </tr>
