--- a/day_03/BTVN/b1.html
+++ b/day_03/BTVN/b1.html
@@ -71,7 +71,7 @@
         <p><i class="fa-solid fa-location-dot"></i>  Cơ sở Tố Hữu</p> 
     </div>
 
-<hr style="width:90%;text-align:center;margin-left:20px">
+<hr style="width:90%;text-align:center;margin-left:20px;color: #e9e9e9;">
 
     <div class="Button">
         <p>Đăng ký</p>
