--- a/day_03/BTVN/b1.html
+++ b/day_03/BTVN/b1.html
@@ -76,6 +76,11 @@
     <div class="Button">
         <p>Đăng ký</p>
 
+        color:#3c78e8;
+    font-size: 16px;
+    margin-left: 16px;
+    margin-top: 9px;
+
     </div>
   </body>
 </html>
