--- a/day_04/BTVN/chitiet2.html
+++ b/day_04/BTVN/chitiet2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lập trình di động đa nền tảng React Native cập nhật 2022</title>
+    <title>DevOps 2022</title>
 </head>
 
 <link
