fix loi k update css

--- a/day_04/BTVN/b2.html
+++ b/day_04/BTVN/b2.html
@@ -32,6 +32,7 @@
 
     <!-- file tự viết đặt xuống dưới -->
     <link rel="stylesheet" href="./b2.css" />
+    <link rel="stylesheet" href="./b2.2.css">
   </head>
   <body>
 
