--- a/day_05/dropdown.html
+++ b/day_05/dropdown.html
@@ -22,6 +22,113 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon (1).ico" type="image/x-icon">
   </head>
+
+
+  <style>
+      * {
+  margin: 0;
+  padding: 0;
+  /* transition: all 0.3s; */
+}
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: azure;
+
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  align-items: center;
+}
+#mainnav {
+  padding: 10px;
+  margin: 10px;
+}
+#mainnav ul {
+  background-color: #fff;
+  list-style: none;
+  padding: 0px;
+  width: 200px;
+  text-align: left;
+}
+#mainnav ul li {
+  position: relative;
+  width: 200px;
+  height: 40px;
+  line-height: 40px;
+  /* border-bottom: 1px solid #fff; */
+}
+
+#mainnav ul li a {
+  text-decoration: none;
+  color: #757575;
+
+  padding: 0 16px;
+  display: block;
+  font-size: 13px;
+}
+#mainnav li:hover{
+    background: #e0dddd;
+  }
+#mainnav .sub-menu {
+  position: absolute;
+  left: 200px;
+  top: 0px;
+  width: 200px;
+  display: none;
+  text-align: left;
+  /* border-left: 1px solid #fff; */
+  font-size: 90%;
+  /* border-radius: 0px 10px 10px 0px; */
+  box-shadow: 0 2px 4px rgb(0 0 0 / 35%);
+  /* border-left: 1px solid #757575; */
+}
+#mainnav li:hover .sub-menu {
+  display: block;
+  /* background: #3B5998; */
+  color: red;
+}
+#mainnav .sub-menu2 {
+  position: absolute;
+  left: 200px;
+  top: 0;
+  width: 200px;
+  /* border-left: 1px solid #757575; */
+  box-shadow: 0 2px 4px rgb(0 0 0 / 35%);
+  /* border-radius: 0px 10px 10px 0px; */
+  display: none;
+}
+#mainnav .sub-menu li:hover .sub-menu2 {
+  display: block;
+}
+#mainnav .sub-menu3 {
+  position: absolute;
+  left: 200px;
+  top: 0;
+  width: 200px;
+  /* border-left: 10px solid #f8f8f8; */
+  /* border-radius: 0px 50px 10px 0px; */
+  display: none;
+}
+#mainnav .sub-menu2 li:hover .sub-menu3 {
+  display: block;
+}
+#mainnav li:hover > a {
+  color: chocolate;
+}
+.mainnav .sub-menu:hover > a .icon,
+.mainnav .sub-menu:hover > a .icon {
+  display: inline-block;
+  color: chocolate;
+}
+.icon {
+  /* display: none; */
+  /* margin-left: 160px; */
+  float: right;
+}
+
+  </style>
   <body>
     <h2 class="title">Menu Lazada</h2>
     <div id="mainnav">
