--- a/day_08/dienthoai.html
+++ b/day_08/dienthoai.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Điện thoại</title>
 
     <!-- link font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -46,11 +46,11 @@
               <ul>
                 <li><a href="./index.html">TRANG CHỦ</a>
                   </li>
-                  <li><a href="./dienthoai.html">ĐIỆN THOẠI&nbsp; </a><span><i class="fa-solid fa-caret-down"></i></span>
+                  <li><a href="./index.html">ĐIỆN THOẠI&nbsp; </a><span><i class="fa-solid fa-caret-down"></i></span>
                   <ul class="sub-menu">
-                    <li><a href="./dienthoai.html">Iphone&nbsp; </a></li>
-                      <li><a href="./dienthoai.html">Xiaomi&nbsp; </a></li>
-                      <li><a href="./dienthoai.html">Samsung&nbsp; </a></li>
+                      <li><a href="./index.html">Iphone&nbsp; </a></li>
+                      <li>Xiaomi</li>
+                      <li>Samsung</li>
                       
                   </ul>
                   </li>
@@ -146,7 +146,7 @@
 
       </a> 
       </div>
-      <a href="./chitietSanPham 1.html">
+      <a href="./chitietSanPham 1.html" >
       <div class="card">
         <div class="image">
           <img
@@ -182,7 +182,7 @@
         </div>
       </div>
 </a>
-      <a href="./chitietSanPham.html">
+      <a href="./chitiet 3.html" target="_blank">
         <div class="card">
           <div class="image">
             <img
@@ -223,7 +223,7 @@
         <div class="card">
           <div class="image">
             <img
-              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2020/09/23/Macbook%20Pro%2013%20inch%20(2020)%20with%20Touch%20bar-100.jpg"
+              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2022/02/09/image-removebg-preview-19.png"
               alt="Ảnh khóa học"
             />
           </div>
@@ -258,7 +258,7 @@
           <div class="card">
             <div class="image">
               <img
-                src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2021/12/12/laptop-dell-g15-ryzen-edition-5515-70266675-chinh-hang-5.png"
+                src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2022/01/27/thumb.jpg"
                 alt="Ảnh khóa học"
               />
             </div>
@@ -294,7 +294,7 @@
         <div class="card">
           <div class="image">
             <img
-              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2020/09/22/S%E1%BA%A1c-d%E1%BB%B1-ph%C3%B2ng-Energizer-10,000mAh---QE10007PQ.jpg"
+              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2021/04/17/image-removebg-preview-5.png"
               alt="Ảnh khóa học"
             />
           </div>
@@ -330,7 +330,7 @@
         <div class="card">
           <div class="image">
             <img
-              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2021/12/30/image-removebg-preview-1.png"
+              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2021/02/25/lech-duoi.png"
               alt="Ảnh khóa học"
             />
           </div>
@@ -366,7 +366,7 @@
         <div class="card">
           <div class="image">
             <img
-              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2020/09/23/%E1%BB%90p%20l%C6%B0ng%20ch%E1%BB%91ng%20s%E1%BB%91c%20UAG%20Monarch%20Samsung%20Galaxy%20Note%2020%20-%20Note%2020%20Ultra%20-%20Ch%C3%ADnh%20h%C3%A3ng-100_637364735544367413.jpg"
+              src="https://cdn.hoanghamobile.com/i/productlist/ts/Uploads/2022/01/25/oo.png"
               alt="Ảnh khóa học"
             />
           </div>
