--- a/day_08/dienthoai.html
+++ b/day_08/dienthoai.html
@@ -48,9 +48,9 @@
                   </li>
                   <li><a href="./index.html">ĐIỆN THOẠI&nbsp; </a><span><i class="fa-solid fa-caret-down"></i></span>
                   <ul class="sub-menu">
-                      <li><a href="./index.html">Iphone&nbsp; </a></li>
-                      <li>Xiaomi</li>
-                      <li>Samsung</li>
+                    <li><a href="./dienthoai.html">Iphone&nbsp; </a></li>
+                    <li><a href="./dienthoai.html">Xiaomi&nbsp; </a></li>
+                    <li><a href="./dienthoai.html">Samsung&nbsp; </a></li>
                       
                   </ul>
                   </li>
