--- a/thi/chitietSanPham 1.html
+++ b/thi/chitietSanPham 1.html
@@ -108,7 +108,7 @@
             </div>
             <div class="full">
                 <div class="title">
-                    <h1 > Điện thoại di động Apple iPhone 13 Pro Max - Chính hãng VN/A</h1>
+                    <h1 > Điện thoại di động Samsung Galaxy Z Fold3 5G - 512GB - Chính hãng</h1>
                         </div>
 
                 
@@ -299,6 +299,7 @@
               </div> -->
 
         </div>
+            </div>
       
     <div class="cardfull">
       <div class="card1">
