--- a/thi/dienthoai.html
+++ b/thi/dienthoai.html
@@ -182,7 +182,7 @@
         </div>
       </div>
 </a>
-      <a href="./chitiet 3.html" target="_blank">
+      <a href="./chitietSanPham 1.html" >
         <div class="card">
           <div class="image">
             <img
@@ -219,7 +219,7 @@
         </div>
       </a>
 
-      <a href="./chitiet 2.html" target="_blank">
+      <a href="./chitietSanPham.html">
         <div class="card">
           <div class="image">
             <img
@@ -254,7 +254,7 @@
           </div>
         </div>
   </a>
-        <a href="./chitiet 3.html" target="_blank">
+        <a href="./chitietSanPham 1.html" >
           <div class="card">
             <div class="image">
               <img
@@ -290,7 +290,7 @@
           </div>
         </a>
 
-      <a href="./chitiet 1.html">
+      <a href="./chitietSanPham.html">
         <div class="card">
           <div class="image">
             <img
@@ -326,7 +326,7 @@
         </div>
       </a>
 
-      <a href="./chitiet 2.html">
+      <a href="./chitietSanPham.html">
         <div class="card">
           <div class="image">
             <img
@@ -362,7 +362,7 @@
         </div>
       </a>
 
-      <a href="./chitiet 3.html">
+      <a href="./chitietSanPham 1.html">
         <div class="card">
           <div class="image">
             <img
