--- a/thi/chitietSanPham.html
+++ b/thi/chitietSanPham.html
@@ -299,6 +299,7 @@
               </div> -->
 
         </div>
+            </div>
       
     <div class="cardfull">
       <div class="card1">
@@ -424,5 +425,6 @@
       <span class="NoCoppy"><p>© 2018. Công ty cổ phần Thế Giới Di Động. GPDKKD: 0303217354 do sở KH & ĐT TP.HCM cấp ngày 02/01/2007. GPMXH: 238/GP-BTTTT do Bộ Thông Tin và Truyền Thông cấp ngày 04/06/2020.
         Địa chỉ: 128 Trần Quang Khải, P. Tân Định, Q.1, TP.Hồ Chí Minh. Điện thoại: 028 38125960. Email: cskh@thegioididong.com. Chịu trách nhiệm nội dung: Huỳnh Văn Tốt. </p></span>
     </div>
+
   </body>
 </html>
