--- a/thi/index.html
+++ b/thi/index.html
@@ -220,7 +220,7 @@
         </div>
       </a>
 
-      <a href="./chitiet 2.html" target="_blank">
+      <a href="./chitietSanPham 1.html">
         <div class="card">
           <div class="image">
             <img
@@ -255,7 +255,7 @@
           </div>
         </div>
   </a>
-        <a href="./chitiet 3.html" target="_blank">
+        <a href="./chitietSanPham.html">
           <div class="card">
             <div class="image">
               <img
@@ -291,7 +291,7 @@
           </div>
         </a>
 
-      <a href="./chitiet 1.html">
+      <a href="./chitietSanPham 1.html">
         <div class="card">
           <div class="image">
             <img
@@ -327,7 +327,7 @@
         </div>
       </a>
 
-      <a href="./chitiet 2.html">
+      <a href="./chitietSanPham.html">
         <div class="card">
           <div class="image">
             <img
@@ -363,7 +363,7 @@
         </div>
       </a>
 
-      <a href="./chitiet 3.html">
+      <a href="./chitietSanPham 1.html">
         <div class="card">
           <div class="image">
             <img
